# honest_merchant

./: Cargo.toml  LICENSE  README.md  index.html  justfile
assets/: stand.glb  stand.gltf
assets/customers/: attentive.chr.ron  cop.chr.ron  dumb.chr.ron  normal.chr.ron
src/: assets.rs  crowd.rs  input.rs  main.rs  player.rs  sound.rs  world.rs
src/game/: customer.rs  goods.rs  mod.rs  scales.rs
src/ui/: day_end_menu.rs  game_end_menu.rs  main_menu.rs  mod.rs  player_ui.rs  tooltips.rs
src/utils/: lenses.rs  mod.rs  text_box.rs
