[package]
name = "honest_merchant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["wayland"] }
bevy_tweening = { version = "0.9.0", default-features = false, features = ["bevy_asset"]}
bevy_mod_picking = { version = "0.17", default-features = false, features = ["backend_raycast", "backend_bevy_ui"] }
leafwing-input-manager = "0.11.1"
ron = "0.8.1"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
rand = { version = "0.8.5", features = ["small_rng"] }
strum = { version = "0.25.0", features = ["derive"] }
bevy_mod_billboard = { git = "https://github.com/robtfm/bevy_mod_billboard/", branch = "bevy12", version = "0.4.1" }
bevy_eventlistener = "0.6.0"
bevy_asset_loader = { version = "0.18.0", features = ["3d"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = "thin"

[lints.clippy]
type_complexity = "allow"
